# mocap_ros

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  prepare.sh  pyproject.toml  run_docker  setup.py
hamer_ros/: CMakeLists.txt  package.xml  prepare.sh  requirements.txt  run_docker
hamer_ros/launch/: sample.launch
hamer_ros/node_scripts/: hand_3d_node.py  hand_detection_node.py
hand_object_detection/: CMakeLists.txt  Dockerfile  package.xml  prepare.sh  pyproject.toml
hand_object_detection_msgs/: CMakeLists.txt  package.xml
hand_object_detection_msgs/msg/: HandDetection.msg  HandDetectionArray.msg
launch/: acr_handmocap.launch  body_mocap.launch  hand_mocap.launch  sample.launch  wholebody_mocap.launch
msg/: Detection.msg  DetectionArray.msg  HandDetection.msg  HandDetectionArray.msg  Mocap.msg  MocapArray.msg  MocapDetection.msg  MocapDetectionArray.msg
node_scripts/: acr_hand_mocap_node.py  detection_node.py  hand_3d_node.py  hand_detection_node.py  hand_object_detection_node.py  utils.py
rviz/: hand.rviz  wholebody.rviz
scripts/: rosbag_hand_detector.py
src/hand_object_detection_ros/: detector_wrapper.py  mocap_wrapper.py  utils.py
src/mocap_ros/: detector_wrapper.py  mocap_wrapper.py  utils.py
